--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,6 +10,8 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@capacitor/cli": "^7.4.3",
+    "@capacitor/core": "^7.4.3",
     "@metamask/detect-provider": "^2.0.0",
     "@tailwindcss/vite": "^4.1.13",
     "crypto-js": "^4.2.0",
