--- a/frontend/package.json
+++ b/frontend/package.json
@@ -17,6 +17,7 @@
     "crypto-js": "^4.2.0",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
+    "react-icons": "^5.5.0",
     "react-router-dom": "^7.8.2",
     "tailwindcss": "^4.1.13",
     "web3": "^4.16.0"
